# pynchy

./: .coverage  .env.EXAMPLE  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  README.md  litellm_config.yaml.example  mkdocs.yml  pyproject.toml
.claude/: deployment.md  development.md  documetnation-style-guide.md  hookify.document-gotchas.local.md  hookify.prefer-deploy-endpoint.md  hookify.require-uv-run-python.md  hookify.ruff-check-require-fix.md  hookify.tdd-bug-fixes.local.md  hookify.tdd-bug-fixes.md  hookify.warn-backwards-compat.md  plugins.md  style-guide.md  worktrees.md
.github/: PULL_REQUEST_TEMPLATE.md
backlog/: TODO.md  unified-message-bus-plan.md
container/agent_runner/: pyproject.toml
container/agent_runner/src/agent_runner/: core.py  hooks.py  ipc.py  ipc_mcp.py  main.py  models.py  registry.py
container/agent_runner/src/agent_runner/agent_tools/: __init__.py  __main__.py  _ipc.py  _ipc_request.py  _registry.py  _server.py  _tools_admin.py  _tools_calendar.py  _tools_email.py  _tools_google_setup.py  _tools_lifecycle.py  _tools_memory.py  _tools_passwords.py  _tools_slack_tokens.py  _tools_tasks.py  _tools_todos.py  _tools_x.py
container/agent_runner/src/agent_runner/cores/: claude.py  openai.py
container/agent_runner/src/agent_runner/security/: __init__.py  bash_gate.py  guard_git.py
container/agent_runner/tests/: test_ask_user_tool.py  test_bash_gate.py  test_guard_git_hook.py  test_hooks.py  test_initial_input.py  test_input_watchdog.py  test_ipc_request_watchdog.py  test_output_files.py
(+744 files in other folders)
