[project]
name = "agent-runner"
version = "0.1.0"
description = "Pynchy container agent runner — executes Claude Agent SDK inside container"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.26.0",
    "croniter>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runner"]
