[project]
name = "agent-runner"
version = "0.1.0"
description = "Pynchy container agent runner — executes Claude Agent SDK inside container"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.26.0",
    "croniter>=6.0.0",
    "openai-agents>=0.9.0",
    "watchdog>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runner"]

# Mirrored from: pyproject.toml (root)
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
